kanc/src/tests/sample_code/should_fail/single_file/type_check/non_adt_matchee/type1.k
type U {
    .u: U,
}

let foo = fun foo_(x: U): U {
    match Type {}
};
